# iob-ia

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
notebooks/: 20250714_Magda_cleared_organoids.ipynb  20250728_testing_min_res.ipynb  20250808_VISUALISE_testing_min_res.ipynb  20250901_iob_worklfow_2D.ipynb  20250912_iob_workflow_3D.ipynb  20250915_iob_workflow_3D_batch.ipynb  batch_prediction_simple.ipynb  test_cellpose_big-image.ipynb  test_cle.ipynb  test_zarr_prediction.ipynb  testing.ipynb  testing_marc.ipynb
notebooks/.k_razhjl_distributed_cellpose_tempdir/segmentation_unstitched.zarr/: zarr.json
notebooks/.k_razhjl_distributed_cellpose_tempdir/segmentation_unstitched.zarr/c/0/0/: 1
resources/: test_image.nd2  test_image.tif  wannabe_sphere.tif  wannabe_sphere_and_ellipse.tif
src/iob_ia/: __init__.py  custom_image.py
src/iob_ia/utils/: classify.py  extra_props.py  filter_labels.py  io_utils.py  measure.py  segment.py  segment_extra.py  visualise.py  workflows2d.py
tests/: test_extra_props.py  test_io_utils.py  test_iob_ia.py  test_measure.py  test_segment.py
